[package]
name = "upgradedb4pg"
version = "0.1.0"
description = "simple postgresql database version control tool"
authors = ["hjiayz <hjiayz@163.com>"]
license = "AGPL-3.0-only"
repository = "https://github.com/hjiayz/upgradedb4pg"

[dependencies]
dotenv = "0.13.0"
clap = "2.32.0"
rustyline = "2.1.0"
postgres = "0.15.2"
failure = "0.1.2"